fix(globals.css): adjust margins for better alignment of icons

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -269,6 +269,8 @@ body {
   width: 24px;
   height: 24px;
   vertical-align: middle;
+  margin-left: -0px;
+  margin-right: -8px;
 }
 
 .tutorial {
